small refactor + gitignore